<resources>
    <string name="app_name">Bluetooth LE Tester</string>
    <string name="disconnect">Disconnect</string>
    <string name="StopScan">Stop scan</string>
    <string name="StartScan">Start scan</string>
    <string name="Scanning">Scanning…</string>
    <string name="mac_address">MAC address</string>
    <string name="DeviceName">Device name</string>
    <string name="characteristics_unknown_name">Unknown characteristics name</string>
    <string name="characteristics_unknown_uuid">Unknown UUID</string>
    <string name="characteristics_read_access">Read</string>
    <string name="characteristics_write_access">Write</string>
    <string name="characteristics_notify_access">Notify</string>
    <string name="characteristics_value">value</string>
    <string name="service_name">Unknown service name</string>
    <string name="service_uuid">Unknown UUID</string>
    <string name="connection_progressing">Progressing…</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="rssi">signal</string>
    <string name="characteristic_confirm_request">Request</string>
    <string name="characteristic_confirm_write">Send</string>
    <string name="spinnerDropDownValueFormatTitle">Format</string>
    <string name="empty_characteristic_value">No value</string>
    <string name="checkbox_refresh_cache">Clear GATT-cache.</string>
<!--
Android stores the discovered GATT-services and characteristics into cache-file.
For each remote device you have been connected earlier, contains this dedicated cache.
When reconnecting to your remote device, GATT-information is gathered from the cache.
But, sometimes GATT-information in remote device might have changed.
Then check the checkbox before starting to connect, for clearing the cache file.
Otherwise keep this checkbox unchecked.
-->
    <string name="checkbox_refresh_cache_tip">
        Clear local cache for discovering GATT-data from remote device.
        Otherwise keep this box unchecked.
    </string>
    <string name="Disable">Off</string>
</resources>