<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFD0FDF3">

    <TextView
        android:id="@+id/expanded_characteristic_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
        android:text="@string/characteristics_unknown_name"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/expanded_characteristic_uuid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/expanded_characteristic_uuid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
        android:text="@string/characteristics_unknown_uuid"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupReadWriteNotify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expanded_characteristic_name"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radioGroupReadWriteNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expanded_characteristic_uuid">

        <RadioButton
            android:id="@+id/radioButtonRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/characteristics_read_access"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioButtonWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/characteristics_write_access"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radioButtonNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/characteristics_notify_access"
            android:textColor="@android:color/black" />
    </RadioGroup>

    <EditText
        android:id="@+id/characteristic_value"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="@drawable/boarder"
        android:inputType="text"
        android:hint="@string/hexadecimal"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/characteristics_value"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/read_characteristics_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupReadWriteNotify"
        tools:ignore="LabelFor,RtlSymmetry" />

    <Button
        android:id="@+id/read_characteristics_value"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/characteristics_acknowledge_action"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/characteristic_value"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupReadWriteNotify" />

</androidx.constraintlayout.widget.ConstraintLayout>